# eo2c

./: .gitignore  CMakeLists.txt  README.md
eo/org/eolang/: array.eo  bool.eo  bytes.eo  error.eo  float.eo  int.eo  string.eo
eo/org/eolang/collections/: list.eo
eo/org/eolang/io/: stdout.eo
eo/org/eolang/math/: angle.eo  negative-infinity.eo
include/args-parser/: arg.hpp  cmd_line.hpp  context.hpp  help.hpp  help_printer.hpp  multi_arg.hpp  utils.hpp
src/: CMakeLists.txt  main.cpp
src/compiler/: CMakeLists.txt  compiler.cpp  compiler.h  config.cpp  config.h
src/generator/: CMakeLists.txt  application_generator.cpp  application_generator.h  cmake_generator.cpp  cmake_generator.h  code_model.cpp  code_model.h  entry_point_generator.cpp  entry_point_generator.h  generator.cpp  generator.h  util.cpp  util.h
src/main/: CMakeLists.txt  main.cpp
src/model/: CMakeLists.txt  id_tag_table.cpp  id_tag_table.h  imports_map.cpp  imports_map.h  object.cpp  object.h  translation_unit.h  types.h  validator.cpp  validator.h
src/optimizer/: CMakeLists.txt  optimizer.cpp  optimizer.h
src/parser/: CMakeLists.txt  parser.cpp  parser.h
src/templates/: object.cpp  object.h
templates/: object.cpp  object.h
templates/org/eolang/: EO_array_at.cpp  EO_array_with.cpp  EO_bool_EO_and.cpp  EO_float_div.cpp  EO_int_as_bytes.cpp  EO_int_div.cpp  EO_int_plus.cpp  EO_int_times.cpp  EO_string_as_bytes.cpp  EO_string_length.cpp  EO_string_slice.cpp  array_at.cpp  array_length.cpp  array_with.cpp  bytes_EO_and.cpp  bytes_EO_not.cpp  bytes_EO_or.cpp  bytes_as_float.cpp  bytes_as_int.cpp  bytes_as_string.cpp  bytes_concat.cpp  bytes_eo_or.cpp  bytes_eo_xor.cpp  bytes_eq.cpp  bytes_right.cpp  bytes_size.cpp  bytes_slice.cpp  eo_array_length.cpp  eo_array_with.cpp  eo_bool_eo_and.cpp  eo_bool_eo_if.cpp  eo_bool_eo_not.cpp  eo_bool_eo_or.cpp  eo_float_as_bytes.cpp  eo_float_div.cpp  eo_float_gt.cpp  eo_float_plus.cpp  eo_float_times.cpp  eo_int_gt.cpp  eo_int_minus.cpp  (+7 more)
tests/: CMakeLists.txt  parser_test.cpp
tests/cpp/: CMakeLists.txt  helper.cpp  helper.h  model_test.cpp  parser_test.cpp  validator_test.cpp
tests/eo/: .config  test-all.eo  test-array-1.eo  test-array-2.eo  test-array-3.eo  test-array.eo  test-bool-1.eo  test-bool-2.eo  test-bool-3.eo  test-bool-4.eo  test-bool.eo  test-bytes-1.eo  test-bytes-10.eo  test-bytes-11.eo  test-bytes-12.eo  test-bytes-13.eo  test-bytes-2.eo  test-bytes-3.eo  test-bytes-4.eo  test-bytes-5.eo  test-bytes-6.eo  test-bytes-7.eo  test-bytes-8.eo  test-bytes-9.eo  test-bytes.eo  test-float-1.eo  test-float-10.eo  test-float-2.eo  test-float-3.eo  test-float-4.eo  test-float-5.eo  test-float-6.eo  test-float-7.eo  test-float-8.eo  test-float-9.eo  test-float.eo  test-int-1.eo  test-int-2.eo  test-int-3.eo  test-int-4.eo  (+11 more)
tests/eo/functional/: test-all.eo  test-bool.eo  test-float.eo  test-general.eo  test-string.eo
tests/eo/profile/: test1.eo  test2.eo  test3.eo
(+24 files in other folders)
