cmake_minimum_required(VERSION 3.5 FATAL_ERROR)

project(eo2c LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_LIBDIR})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_LIBDIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/../bin")

add_subdirectory(src)

file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/templates
     DESTINATION ${CMAKE_BINARY_DIR}/../bin)
file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/eo
     DESTINATION ${CMAKE_BINARY_DIR}/../bin)

enable_testing()

#add_subdirectory(tests/cpp)
